--- a/Themes/Quiet.theme.css
+++ b/Themes/Quiet.theme.css
@@ -1,7 +1,7 @@
 //META{"name":"Quiet","description":"Dark and Quiet. Easy on the eyes. <div class='themedescription'></div><br><a class='gitbutton' href='https://github.com/0mniscient/Discord-Themes/'target='_blank'>GITHUB</a><a class='docsbutton' href='https://betterdocs.net/themes.html'target='_blank'>MORE THEMES</a><a class='serverbutton' href='https://discord.gg/MpWmqQk'target='_blank'>SERVER</a><a class='donatebutton' href='https://paypal.me/Chaotiic' target='_blank'>DONATE PLS</a><br>","author":"Omniscient","version":"<span class='version'></span>"}*//
 
 /* IMPORT CSS FROM GITHUB */
-@import url("https://rawgit.com/0mniscient/Discord-Themes/master/css/Quiet.css");
+@import url("https://raw.githubusercontent.com/yonguelink/Discord-Themes/master/css/Quiet.css");
 /*
 ---------------------------------------------------------------------------------------------------------------------------------------------
 IMPORTANT: CHANGE DISCORDS THEME TO DARK THEME IN APPEARANCE SETTINGS FOR THIS THEME TO WORK!
@@ -9,11 +9,6 @@ IMPORTANT: CHANGE DISCORDS THEME TO DARK THEME IN APPEARANCE SETTINGS FOR THIS T
 ===== CUSTOMIZABLE COLORS =====
 */
 :root { 
- --main-color: #8d2036;
+ --main-color: #A10000;
  --hover-color: #6f182a;
  }
-/*
----------------------------------------------------------------------------------------------------------------------------------------------
-TROUBLESHOOTING: IF YOU NEED ANY HELP GO TO HTTPS://BETTERDOCS.NET
----------------------------------------------------------------------------------------------------------------------------------------------
-*/ 
