--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -2119,7 +2119,7 @@ form.modal-content.form.need-help-modal::after{content:"";background:#fff;positi
 
 .channel-textarea-upload+textarea {margin-left: 5px;}
 
-.channel-textarea-inner textarea{color:#fff;-webkit-transition: all 100ms ease;transition: all 100ms ease;margin-left: 10px !important;padding: 26px 0px;margin-left: 25px;margin-right: 0;max-height: 200px}}
+.channel-textarea-inner textarea{color:#fff;-webkit-transition: all 100ms ease;transition: all 100ms ease;margin-left: 10px !important;padding: 26px 0px;margin-left: 25px;margin-right: 0;max-height: 200px}
 
 .channel-textarea-inner textarea:focus{color:#fff;-webkit-transition:all 100ms ease;transition:all 100ms ease;opacity:0.95;}
 
