--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -2555,7 +2555,7 @@ div.control-group .shortcut-recorder input[type=text] {line-height: 41px;}
 
 #settings-roles .roles li.sorting:after {border: 2px solid var(--hover-color);content: " ";}
 
-.avatar-small .status{border-radius: 3px;}
+.avatar-small .status{border-radius: 3px; width: 30px; height: 30px;}
 
 .channel-members .avatar-small{border-radius: 0px;}
 
